Add annotation CircuitBreaker && RateLimit. Fix logic for matching market order